add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Core")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Math")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Containers")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Processing")

set(
	C4STL_SOURCES 
	"${C4STL_CORE_SOURCES}" 
	"${C4STL_MATH_SOURCES}" 
	"${C4STL_CONTAINERS_SOURCES}" 
	"${C4STL_PROCESSING_SOURCES}" 
	CACHE INTERNAL "" FORCE
	)

set(
	C4STL_HEADERS 
	"${C4STL_CORE_HEADERS}" 
	"${C4STL_MATH_HEADERS}" 
	"${C4STL_CONTAINERS_HEADERS}" 
	"${C4STL_PROCESSING_HEADERS}" 
	CACHE INTERNAL "" FORCE
	)