add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/Arrays")

set(C4STL_CONTAINERS_SOURCES 
	"${C4STL_CONTAINERS_ARRAYS_SOURCES}"
	"${CMAKE_CURRENT_SOURCE_DIR}/List.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/Map.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/Queue.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/Set.cpp" 
	"${CMAKE_CURRENT_SOURCE_DIR}/Stack.cpp" 
	CACHE INTERNAL "" FORCE)

set(C4STL_CONTAINERS_HEADERS 
	"${C4STL_CONTAINERS_ARRAYS_HEADERS}"
	"${CMAKE_CURRENT_SOURCE_DIR}/List.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/Map.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/Queue.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/Set.h" 
	"${CMAKE_CURRENT_SOURCE_DIR}/Stack.h" 
	CACHE INTERNAL "" FORCE)